code before changing loss function

--- a/autoencoders_pytorch.ipynb
+++ b/autoencoders_pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOywjO44/eeHRf+afFBCEcr",
+      "authorship_tag": "ABX9TyOjuxNSan5hYvhOnz0pWqgx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -290,34 +290,6 @@
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
         "\n",
-        "# Define the autoencoder\n",
-        "# class ConvAutoencoder(nn.Module):\n",
-        "#     def __init__(self):\n",
-        "#         super(ConvAutoencoder, self).__init__()\n",
-        "\n",
-        "#         # Encoding layers\n",
-        "#         self.encoder = nn.Sequential(\n",
-        "#             nn.Conv1d(6, 16, kernel_size=3, stride=1, padding=0),\n",
-        "#             nn.ReLU(inplace=True),\n",
-        "#             nn.MaxPool1d(2, stride=2),\n",
-        "#             nn.Conv1d(16, 8, kernel_size=3, stride=1, padding=1),\n",
-        "#             nn.ReLU(inplace=True),\n",
-        "#             nn.MaxPool1d(2, stride=2)\n",
-        "#         )\n",
-        "\n",
-        "#         # Decoding layers\n",
-        "#         self.decoder = nn.Sequential(\n",
-        "#             nn.ConvTranspose1d(8, 16, kernel_size=4, stride=2, padding=1),\n",
-        "#             nn.ReLU(inplace=True),\n",
-        "#             nn.ConvTranspose1d(16, 6, kernel_size=3, stride=2, padding=0, output_padding=1), #, output_padding=1),\n",
-        "#             nn.Sigmoid()\n",
-        "#         )\n",
-        "\n",
-        "#     def forward(self, x):\n",
-        "#         x = self.encoder(x)\n",
-        "#         x = self.decoder(x)\n",
-        "#         return x\n",
-        "\n",
         "class ConvAutoencoder(nn.Module):\n",
         "    def __init__(self, input_length):\n",
         "        super(ConvAutoencoder, self).__init__()\n",
@@ -478,8 +450,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "\n",
         "# Set the device to GPU if available\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
@@ -490,7 +460,7 @@
         "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
         "\n",
         "# Set the number of epochs\n",
-        "n_epochs = 10\n",
+        "n_epochs = 50\n",
         "\n",
         "# Define the batch size\n",
         "batch_size = 32\n",
@@ -533,31 +503,94 @@
         "    \n",
         "\n",
         "\n",
+        "# # Set the device to GPU if available\n",
+        "# device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "\n",
+        "# # Define the loss function\n",
+        "# criterion = nn.CrossEntropyLoss()\n",
+        "\n",
+        "# # Define the optimizer\n",
+        "# optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+        "\n",
+        "# # Set the number of epochs\n",
+        "# n_epochs = 10\n",
+        "\n",
+        "# # Define the batch size\n",
+        "# batch_size = 32\n",
+        "\n",
+        "# # Define the dataloader\n",
+        "# dataset = SequenceDataset(flatted_sequence)\n",
+        "# dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
+        "\n",
+        "# # Train the model\n",
+        "# train_losses = []\n",
+        "# for epoch in range(1, n_epochs+1):\n",
+        "#     train_loss = 0.0\n",
+        "#     for batch_idx, data in enumerate(dataloader):\n",
+        "#         # Transform the data tensor to have the shape (batch_size, n_channels, sequence_length)\n",
+        "#         data = data.permute(0, 2, 1)\n",
+        "#         data = data.float().to(device)\n",
+        "        \n",
+        "#         # Get the true class labels as a tensor\n",
+        "#         labels = torch.tensor(data['label']).to(device)\n",
+        "        \n",
+        "#         # Zero the gradients\n",
+        "#         optimizer.zero_grad()\n",
+        "        \n",
+        "#         # Forward pass\n",
+        "#         outputs = model(data['sequence'])\n",
+        "        \n",
+        "#         # Compute the loss\n",
+        "#         loss = criterion(outputs, labels)\n",
+        "        \n",
+        "#         # Backward pass and optimization\n",
+        "#         loss.backward()\n",
+        "#         optimizer.step()\n",
+        "        \n",
+        "#         # Update the training loss\n",
+        "#         train_loss += loss.item() * data['sequence'].size(0)\n",
+        "    \n",
+        "#     # Print the average training loss for the epoch\n",
+        "#     train_loss /= len(dataloader.dataset)\n",
+        "#     print('Epoch: {} \\tTraining Loss: {:.6f}'.format(epoch, train_loss))\n",
+        "    \n",
+        "#     # Append the training loss to the list\n",
+        "#     train_losses.append(train_loss)\n",
+        "    \n",
+        "# # Plot the loss\n",
+        "# plt.plot(train_losses)\n",
+        "# plt.xlabel('Epoch')\n",
+        "# plt.ylabel('Training Loss')\n",
+        "# plt.show()\n",
+        "\n",
+        "# # Save the model parameters\n",
+        "# if not os.path.exists('model_parameters'):\n",
+        "#     os.makedirs('model_parameters')\n",
+        "\n",
+        "# model_path = 'model_parameters/model.pth'\n",
+        "# torch.save(model.state_dict(), model_path)\n",
+        "\n",
         "\n"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 236
         },
         "id": "DpIorpkESgXK",
-        "outputId": "64d06b17-9d20-4832-9c13-2b917f5bf6a9"
+        "outputId": "de3e2648-50fc-44af-a790-a90feeea3147"
       },
-      "execution_count": 266,
+      "execution_count": 269,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch: 1 \tTraining Loss: 0.053378\n",
-            "Epoch: 2 \tTraining Loss: 0.047496\n",
-            "Epoch: 3 \tTraining Loss: 0.042311\n",
-            "Epoch: 4 \tTraining Loss: 0.038065\n",
-            "Epoch: 5 \tTraining Loss: 0.034674\n",
-            "Epoch: 6 \tTraining Loss: 0.031876\n",
-            "Epoch: 7 \tTraining Loss: 0.029583\n",
-            "Epoch: 8 \tTraining Loss: 0.027847\n",
-            "Epoch: 9 \tTraining Loss: 0.026397\n",
-            "Epoch: 10 \tTraining Loss: 0.025172\n"
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-269-94eec5452180>\u001b[0m in \u001b[0;36m<cell line: 75>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m         \u001b[0;31m# Get the true class labels as a tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 83\u001b[0;31m         \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'label'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m         \u001b[0;31m# Zero the gradients\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: too many indices for tensor of dimension 3"
           ]
         }
       ]
@@ -713,9 +746,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "flatted_sequence[1]"
-      ],
+      "source": [],
       "metadata": {
         "id": "HX7hA1Ey2ynm"
       },
